--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@800&family=Montserrat:wght@600&family=Poppins:wght@300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@800&family=Montserrat:wght@600&family=Poppins:wght@300;400;500;700&display=swap");
 
 /**** Styles ****/
 :root {
-  --color-default: #4e5150;
-  --color-primary: #4f4f4f;
+  --color-default: #4f4f4f;
+  --color-primary: #2d9cdb;
+  --color-secondary: #eb5757;
   --color-dark: #333;
   --color-muted: #828282;
   --color-footer: #a9a9a9;
-  --color-orange: #f2994a;
+  --color-gray: #bdbdbd;
 
-  --bg-default: var(--color-orange);
+  --bg-default: var(--color-primary);
   --bg-secondary: #e0e0e0;
   --bg-white: #f2f2f2;
+  --bg-dark: #100e1d;
 
-  --font-default: "Montserrat", sans-serif;
+  --font-default: "Poppins", sans-serif;
+  --font-primary: "Heebo", sans-serif;
+  --font-info: "Montserrat", sans-serif;
 }
 
 html,
@@ -37,6 +41,9 @@ a {
 h1,
 h2,
 h3,
+h4,
+h5,
+h6,
 p {
   margin: 0;
 }
@@ -45,6 +52,7 @@ li {
 }
 img {
   width: 100%;
+  border-radius: 18px;
 }
 input[type="checkbox"] {
   border: 1px solid var(--color-muted);
@@ -74,18 +82,294 @@ button:focus {
 .hidden {
   display: none;
 }
+.txt-primary {
+  color: var(--color-primary);
+}
+.txt-secondary {
+  color: var(--color-secondary);
+}
+.txt-dark {
+  color: var(--color-dark);
+}
 
 /**** Container ****/
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 5vh 15vw;
+  padding: 5vh 5vw;
 }
 
-@media (max-width: 1024px) {
-  /**** Container ****/
+/**** Navigation ****/
+.container .nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 95px;
+}
+.container .nav ul {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+}
+.container .nav a {
+  color: var(--color-dark);
+}
+.container .nav .logo {
+  font-family: var(--font-secondary);
+  font-style: normal;
+  font-weight: 800;
+  font-size: 36px;
+  line-height: 53px;
+  flex-wrap: wrap;
+  transition: 400ms;
+}
+/**** Menu ****/
+.container .nav ul li {
+  display: block;
+  font-family: var(--font-default);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  margin: 0 1.5vw 0 1.5vw;
+  transition: 400ms;
+}
+.container .nav ul li a {
+  text-align: center;
+}
+.container .nav ul li.active {
+  font-weight: 700;
+}
+.container .nav .menu-icon {
+  position: fixed;
+}
+
+/**** Main ****/
+.container main {
+  display: flex;
+  flex-direction: row;
+}
+main .home {
+  margin: 0 0 15vh 0;
+}
+main .home .info {
+  margin: 0 10vw;
+}
+main .home .message {
+  max-width: 370px;
+}
+main .home .title {
+  font-family: var(--font-default);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 72px;
+  color: var(--color-dark);
+  margin-bottom: 42px;
+}
+main .home .subtitle,
+main .home .subtitle {
+  font-family: var(--font-default);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+}
+main .home .subtitle {
+  margin-bottom: 16px;
+}
+main .home p {
+  font-weight: normal;
+  color: var(--color-default);
+  margin-bottom: 42px;
+}
+
+/**** Contact ****/
+.contact .form-group {
+  color: var(--color-default);
+  width: 350px;
+}
+.contact .form-group label {
+  display: block;
+  font-family: var(--font-default);
+  color: var(--color-muted);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  margin-bottom: 9px !important;
+}
+.contact .form-group .input-group {
+  display: flex;
+  width: 100%;
+  border-radius: 12px;
+  background: var(--bg-white);
+  padding: 4px;
+}
+.contact .form-group .input-group input,
+.contact .form-group .input-group button {
+  font-family: var(--font-default);
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 27px;
+}
+.contact .form-group .input-group input {
+  display: flex;
+  width: 100%;
+  background: var(--bg-white);
+  border: transparent;
+  border-radius: 12px;
+  padding: 10px;
+}
+.contact .form-group .input-group input::placeholder {
+  color: var(--color-gray);
+}
+
+/**** Footer ****/
+.footer {
+  position: static;
+  bottom: 0;
+  font-family: var(--font-info);
+  color: var(--color-info);
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+}
+
+/****  Media Queries ****/
+/****  Menu ****/
+@media screen and (max-width: 768px) {
+  .container .nav {
+    margin-bottom: 48px;
+  }
+  .container .nav .logo {
+    font-size: 24px;
+    line-height: 35px;
+  }
+  .container .nav ul {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--bg-dark);
+    transition: all 0.2s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    z-index: -1;
+  }
+  .container .nav ul li {
+    margin: 0;
+    margin-bottom: 30px;
+    font-size: 20px;
+    line-height: 28px;
+  }
+  .container .nav ul li a {
+    color: white;
+  }
+  .container .nav .menu-icon {
+    position: relative;
+    display: block;
+    width: 42px;
+    height: 42px;
+    cursor: pointer;
+    z-index: 100;
+    border-radius: 50%;
+  }
+  .container .nav .menu-icon i {
+    display: block;
+    width: 32px;
+    height: 3px;
+    background: var(--bg-dark);
+    border-radius: 2px;
+    text-align: center;
+    margin: 0 auto;
+  }
+  .container .nav .menu-icon i:nth-child(1) {
+    margin-top: 8px;
+  }
+  .container .nav .menu-icon i:nth-child(2) {
+    margin-top: 6px;
+    opacity: 1;
+  }
+  .container .nav .menu-icon i:nth-child(3) {
+    margin-top: 6px;
+  }
+  .container .nav #menu:checked + .menu-icon {
+    transform: rotate(45deg);
+  }
+  .container .nav #menu:checked + .menu-icon i {
+    transition: transform 0.2s ease;
+    background: white;
+  }
+  .container .nav #menu:checked + .menu-icon i:nth-child(1) {
+    transform: translateY(9px);
+  }
+  .container .nav #menu:checked + .menu-icon i:nth-child(2) {
+    opacity: 0;
+  }
+  .container .nav #menu:checked + .menu-icon i:nth-child(3) {
+    transform: translateY(-9px) rotate(90deg);
+  }
+  .container .nav #menu:checked ~ .nav-items {
+    z-index: 50;
+    opacity: 1;
+  }
+  .container .nav #menu:checked ~ .nav-items li {
+    transition: 300ms all ease;
+    opacity: 1;
+  }
+}
+
+/**** Container && Home ****/
+@media (max-width: 768px) {
   .container {
-    padding: 5vh 2.5vw;
+    padding: 2.5vh 3.5vw;
+  }
+  main {
+    display: flex;
+    flex-direction: column;
+  }
+  main .home .message {
+    margin-top: 15px;
+    max-width: 100%;
+  }
+  main .home .title {
+    font-size: 24px;
+    line-height: 36px;
+    margin-bottom: 15px;
+  }
+  main .home .subtitle {
+    font-size: 12px;
+    line-height: 18px;
+    margin-bottom: 0;
+  }
+}
+
+/**** Contact ****/
+@media only screen and (max-width: 768px) {
+  .contact .form-group {
+    width: auto;
+  }
+  .contact .form-group label {
+    font-size: 10px;
+    line-height: 15px;
+  }
+  .contact .form-group .input-group input,
+  .contact .form-group .input-group button {
+    font-size: 14px;
+    line-height: 21px;
   }
 }
