--- a/src/style.css
+++ b/src/style.css
@@ -94,13 +94,13 @@ button.btn-primary {
 }
 
 /**** Text ****/
-.txt-primary {
+.text-primary {
   color: var(--color-primary);
 }
-.txt-secondary {
+.text-secondary {
   color: var(--color-secondary);
 }
-.txt-dark {
+.text-dark {
   color: var(--color-dark);
 }
 
@@ -141,7 +141,7 @@ button.btn-primary {
   color: var(--color-dark);
 }
 .container .nav .logo {
-  font-family: var(--font-secondary);
+  font-family: var(--font-primary);
   font-style: normal;
   font-weight: 800;
   font-size: 36px;
@@ -149,6 +149,7 @@ button.btn-primary {
   flex-wrap: wrap;
   transition: 400ms;
 }
+
 /**** Menu ****/
 .container .nav ul li {
   display: block;
@@ -177,7 +178,7 @@ button.btn-primary {
   align-items: center;
 }
 main .home {
-  margin: 0 0 15vh 0;
+  margin: 0 0 190px 0;
 }
 main .home > .info {
   margin: 0 14vw;
@@ -186,7 +187,6 @@ main .home > .message {
   max-width: 370px;
 }
 main .home .title {
-  font-family: var(--font-default);
   font-style: normal;
   font-weight: 500;
   font-size: 48px;
@@ -199,7 +199,6 @@ main .home .home-title {
 }
 main .home .subtitle,
 main .home p {
-  font-family: var(--font-default);
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -217,11 +216,10 @@ main .home p {
 /**** Contact ****/
 .contact .form-group {
   color: var(--color-default);
-  width: 350px;
+  max-width: 350px;
 }
 .contact .form-group label {
   display: block;
-  font-family: var(--font-default);
   color: var(--color-muted);
   font-style: normal;
   font-weight: 500;
@@ -238,11 +236,11 @@ main .home p {
 }
 .contact .form-group .input-group input,
 .contact .form-group .input-group button {
-  font-family: var(--font-default);
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 27px;
+  padding: 11px 27px;
 }
 .contact .form-group .input-group input {
   display: flex;
@@ -258,11 +256,10 @@ main .home p {
 
 /**** Services ****/
 main .services {
-  margin: 0 6vw;
+  margin: 0 2.5vw;
   transition: all 300ms;
 }
 main .services > .title {
-  font-family: var(--font-default);
   font-style: normal;
   font-weight: 500;
   font-size: 36px;
@@ -281,10 +278,10 @@ main .services > .page-title {
 }
 .card {
   display: block;
-  margin-bottom: 100px;
+  margin-bottom: 190px;
   padding: 45px 34px;
   border: none;
-  transition: all 300ms;
+  transition: all ease-in 300ms;
   cursor: pointer;
 }
 .card:hover {
@@ -306,7 +303,6 @@ main .services > .page-title {
   height: 27px;
 }
 .card .title {
-  font-family: var(--font-default);
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
@@ -315,7 +311,6 @@ main .services > .page-title {
   margin-bottom: 30px;
 }
 .card .content {
-  font-family: var(--font-default);
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -329,7 +324,6 @@ main .works {
   transition: all 300ms;
 }
 main .works > .title {
-  font-family: var(--font-default);
   font-style: normal;
   font-weight: 500;
   font-size: 36px;
@@ -340,18 +334,209 @@ main .works > .title {
 main .works > .page-title {
   max-width: 346px;
 }
+main .works .view-more {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-bottom: 240px;
+}
+main .works .view-more a {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+  color: var(--color-primary);
+}
+main .works .view-more a > img {
+  margin-left: 5px;
+  width: 16px;
+}
 
 /**** Gallery ****/
 main .gallery {
   display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 100px 1fr 100px);
+  column-gap: 20px;
+  row-gap: 5px;
+  transition: all ease-in 300ms;
+  margin-bottom: 35px;
+}
+main .gallery .item:nth-child(1) {
+  grid-column: 1/2;
+  grid-row: 2/4;
+}
+main .gallery .item:nth-child(2) {
+  grid-column: 2/3;
+  grid-row: 1/3;
+}
+main .gallery .item:nth-child(3) {
+  grid-column: 1/2;
+  grid-row: 5/7;
+}
+main .gallery .item:nth-child(4) {
+  grid-column: 2/3;
+  grid-row: 4/6;
+}
+main .gallery .item .title {
+  color: var(--color-dark);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+}
+main .gallery .item .subtitle {
+  color: var(--color-muted);
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+/**** Clients ****/
+main .clients {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 6vw 195px 6vw;
+}
+main .clients .info {
+  max-width: 280px;
+  margin-right: 180px;
+}
+main .clients .info > .title {
+  color: var(--color-dark);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 54px;
+  margin-bottom: 14px;
+}
+main .clients .info > .subtitle {
+  color: var(--color-secondary);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+}
+main .clients .info > p {
+  color: var(--color-default);
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+}
+main .clients .images {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(1, 100px 1fr 100px);
+  column-gap: 24px;
+  row-gap: 24px;
+  transition: all ease-in 300ms;
+  margin-bottom: 35px;
+}
+main .clients .images picture:nth-child(1) {
+  grid-column: 1/2;
+  grid-row: 2/4;
+}
+main .clients .images picture:nth-child(2) {
+  grid-column: 2/3;
+  grid-row: 1/3;
+}
+main .clients .images picture:nth-child(3) {
+  grid-column: 2/3;
+  grid-row: 3/5;
+}
+
+/**** Testimonial ****/
+main .testimonial {
+  display: flex;
+  flex-direction: column;
+  margin: 0 6vw 200px 6vw;
+}
+main .testimonial .comment {
+  color: var(--color-dark);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 54px;
+  margin-bottom: 45px;
+}
+main .testimonial .info {
+  display: flex;
+  align-items: center;
+}
+main .testimonial .info picture {
+  width: 82px;
+  height: 82px;
+  margin-right: 30px;
+}
+main .testimonial .info > .content .title {
+  display: block;
+  color: var(--color-dark);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  margin-bottom: 12px;
+}
+main .testimonial .info > .content .subtitle {
+  color: var(--color-muted);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
 }
 
 /**** Footer ****/
 .footer {
   position: static;
   bottom: 0;
+  display: flex;
+  flex-direction: column;
+  background: var(--bg-dark);
+  padding: 46px 12vw;
+}
+.footer nav ul {
+  margin: 0;
+  padding: 0;
+}
+.footer nav ul li a {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 200%;
+  color: #ffffff;
+}
+.footer .content {
+  display: flex;
+  justify-content: space-between;
+}
+.footer .content .social .title {
+  font-family: var(--font-primary);
+  font-style: normal;
+  font-weight: 800;
+  font-size: 36px;
+  line-height: 53px;
+  color: var(--bg-white);
+}
+.footer .content .social .icons {
+  display: flex;
+}
+.footer .content .social .icons picture {
+  width: 24px;
+  height: 24px;
+  margin-right: 11px;
+}
+.footer .content .social .icons picture > img {
+  border-radius: 0;
+}
+.footer .content .contact .form-group label {
+  color: var(--bg-white);
+}
+.footer .copy {
   font-family: var(--font-info);
-  color: var(--color-info);
+  color: var(--bg-white);
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
@@ -365,14 +550,11 @@ main .gallery {
 /****  Media Queries ****/
 /****  Menu ****/
 @media screen and (max-width: 768px) {
-  .container .nav {
-    margin-bottom: 48px;
-  }
   .container .nav .logo {
     font-size: 24px;
     line-height: 35px;
   }
-  .container .nav ul {
+  .container .nav ul.nav-items {
     position: fixed;
     top: 0;
     left: 0;
@@ -399,16 +581,16 @@ main .gallery {
   .container .nav .menu-icon {
     position: relative;
     display: block;
-    width: 42px;
-    height: 42px;
+    width: 36px;
+    height: 36px;
     cursor: pointer;
     z-index: 100;
     border-radius: 50%;
   }
   .container .nav .menu-icon i {
     display: block;
-    width: 32px;
-    height: 3px;
+    width: 20px;
+    height: 2px;
     background: var(--bg-dark);
     border-radius: 2px;
     text-align: center;
@@ -418,11 +600,11 @@ main .gallery {
     margin-top: 8px;
   }
   .container .nav .menu-icon i:nth-child(2) {
-    margin-top: 6px;
+    margin-top: 4px;
     opacity: 1;
   }
   .container .nav .menu-icon i:nth-child(3) {
-    margin-top: 6px;
+    margin-top: 4px;
   }
   .container .nav #menu:checked + .menu-icon {
     transform: rotate(45deg);
@@ -432,13 +614,13 @@ main .gallery {
     background: white;
   }
   .container .nav #menu:checked + .menu-icon i:nth-child(1) {
-    transform: translateY(9px);
+    transform: translateY(6px);
   }
   .container .nav #menu:checked + .menu-icon i:nth-child(2) {
     opacity: 0;
   }
   .container .nav #menu:checked + .menu-icon i:nth-child(3) {
-    transform: translateY(-9px) rotate(90deg);
+    transform: translateY(-6px) rotate(90deg);
   }
   .container .nav #menu:checked ~ .nav-items {
     z-index: 50;
@@ -453,14 +635,17 @@ main .gallery {
 /**** Container && Home ****/
 @media (max-width: 768px) {
   .container {
-    padding: 2.5vh 4.7vw;
+    padding: 2.5vh 4.5vw;
   }
   main {
     display: flex;
     flex-direction: column;
   }
+  main .home {
+    margin: 0 0 100px 0;
+  }
   main .home > .info {
-    margin: 0 10vw;
+    margin: 0 6vw;
   }
   main .home > .message {
     margin-top: 15px;
@@ -475,23 +660,23 @@ main .gallery {
   main .home p {
     font-size: 12px;
     line-height: 18px;
-    margin-bottom: 0;
+    margin-bottom: 30px;
   }
 }
+
 /**** Services ****/
 @media only screen and (max-width: 768px) {
   main .services {
     margin: 0;
   }
   main .services > .title {
-    font-family: var(--font-default);
     font-style: normal;
     font-weight: 500;
     font-size: 24px;
     line-height: 36px;
     color: var(--color-dark);
     margin: 0 8vw;
-    margin-bottom: 90px;
+    margin-bottom: 45px;
   }
 }
 
@@ -501,12 +686,16 @@ main .gallery {
     display: flex;
     flex-direction: column;
   }
+  .card {
+    padding: 45px 3vw;
+    margin-bottom: 100px;
+  }
 }
 
 /**** Contact ****/
 @media only screen and (max-width: 768px) {
   .contact .form-group {
-    width: auto;
+    max-width: 290px;
   }
   .contact .form-group label {
     font-size: 10px;
@@ -516,5 +705,115 @@ main .gallery {
   .contact .form-group .input-group button {
     font-size: 14px;
     line-height: 21px;
+    padding: 11px 20px;
+  }
+}
+
+/**** Works ****/
+@media only screen and (max-width: 768px) {
+  main .works {
+    margin: 0;
+    width: 100%;
+  }
+  main .works > .title {
+    font-size: 24px;
+    line-height: 36px;
+    margin: 0 4vw;
+    margin-bottom: 48px;
+  }
+  main .works > .page-title {
+    max-width: 100%;
+  }
+  main .works .view-more {
+    justify-content: flex-start;
+    margin-bottom: 100px;
+  }
+}
+
+/**** Gallery ****/
+@media only screen and (max-width: 768px) {
+  main .gallery {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    column-gap: 0;
+    row-gap: 30px;
+  }
+  main .gallery .item:nth-child(1) {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  main .gallery .item:nth-child(2) {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  main .gallery .item:nth-child(3) {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+  main .gallery .item:nth-child(4) {
+    grid-column: 1/2;
+    grid-row: 4/5;
+  }
+  main .gallery .item .title {
+    font-size: 18px;
+    line-height: 27px;
+  }
+  main .gallery .item .subtitle {
+    font-size: 12px;
+    line-height: 18px;
+  }
+}
+
+/**** Clients ****/
+@media only screen and (max-width: 768px) {
+  main .clients {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin: 0 0 100px 0;
+  }
+  main .clients .info {
+    margin: 0 0 36px 0;
+  }
+}
+
+/**** Testimonial ****/
+@media only screen and (max-width: 768px) {
+  main .testimonial {
+    margin: 0 0 100px 0;
+  }
+  main .testimonial .comment {
+    font-size: 24px;
+    line-height: 36px;
+  }
+}
+
+/**** Footer ****/
+@media only screen and (max-width: 992px) {
+  .footer {
+    padding: 46px 6vw;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .footer {
+    padding: 36px 9.5vw;
+  }
+  .footer .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: auto;
+  }
+  .footer nav,
+  .footer .social {
+    margin-bottom: 64px;
+  }
+  .footer .contact {
+    margin-bottom: 155px;
+  }
+  .footer .contact .form-group {
+    color: var(--color-default);
+    max-width: 290px;
   }
 }
